# Privacy-Preservation-Using-Homomorphic-Encryption-Using-Federated-Learning

./: README.md
MINOR/: Random_Hospital_Dataset.csv
MINOR/Ckks-RNS/: Ckks.py
MINOR/LocalModels/Hospital1/: Dataset_Hospital1.csv  Hospital1weights.csv  LogisticRegresseion.py  logistic_regression_model_hospital1.pkl
MINOR/LocalModels/Hospital2/: Dataset_Hospital2.csv  Hospital2weights.csv  LogisticRegression.py  logistic_regression_model_hospital2.pkl
MINOR/seal-fedavg/: CMakeLists.txt  aggregator.cpp  decrypt.cpp  hospital_encrypt.cpp  keygen.cpp
